syntax = "proto3";

package io.github.vinicreis.dht.core.model.response;

import "io/github/vinicreis/dht/core/model/result.proto";

message TransferResponse {
  Result result = 1;
}
